Replace with Math#clamp